# wiretap

./: .gitignore  FRUSTRATION.md  LICENSE  README.md  pyproject.toml
docs/: architecture.md  hermes_integration.md  plugins.md  protocol_v1.md
specs/quotex/v1/: authentication.json  heartbeat.json  layout.json  protocol.json
tests/: conftest.py
tests/analysis/: test_classification.py  test_correlation.py  test_discovery.py  test_protocol_graph.py  test_similarity.py  test_statistics.py  test_structural.py
tests/capture/: test_network.py
tests/clients/: test_client_core.py  test_simulator.py
tests/core/: test_events.py  test_models.py
tests/decoders/: __init__.py  test_builtin.py  test_registry.py
tests/plugins/: __init__.py  test_registry.py
tests/storage/: test_repository.py
tests/validators/: test_price_validator.py
wiretap/: __init__.py  cli.py  watcher.py
wiretap/analysis/: __init__.py  classification.py  comparator.py  correlation.py  discovery.py  protocol_graph.py  similarity.py  statistics.py  structural.py
wiretap/capture/: __init__.py  browser.py  network.py  session.py
wiretap/core/: __init__.py  adapter.py  client.py  config.py  enums.py  events.py  logging.py  models.py  packets.py  registry.py  session.py  state.py
wiretap/decoders/: __init__.py  base.py  registry.py
wiretap/decoders/builtin/: brotli_decoder.py  cbor_decoder.py  flatbuffer_heuristic.py  gzip_decoder.py  json_decoder.py  msgpack_decoder.py  protobuf_heuristic.py  utf16.py  utf8.py  xml_decoder.py  zlib_decoder.py
wiretap/drift/: drift_detector.py
wiretap/plugins/: __init__.py  base.py  generic.py  registry.py
wiretap/protocols/: __init__.py  base.py  replay.py
wiretap/protocols/quotex/: implementation.py
wiretap/replay/: simulator.py
wiretap/reports/: __init__.py  generator.py
wiretap/storage/: __init__.py  engine.py  repository.py  schema.py
wiretap/utils/: __init__.py  formatting.py  hashing.py
wiretap/validators/: price_validator.py
wiretap/visualization/: __init__.py  connection_graph.py  packet_explorer.py  payload_explorer.py  timeline.py
